- Files: Added permission checks to compress functions
- SMIME: Check OCSP locally if smime_root_cert_location is set in config.php

11-06-2020 6.2.126
- Calendar: Fix for "No participant found for this event"

03-02-2020 6.2.125
- Sieve: Don't use :create flag on sieve filter action fileinto
- Files: Check if old user wasn't deleted when recalculating quota
- Calendar: Fixed view grid misalignment

27-01-2020 6.2.124
- Tickets: Show confirm on closing tickets option broke module settings and email viewing.

21-01-2020 6.2.123
- Sieve: Remove :create flag in fileinto command
- Tickets: Leave ticket blank by default didn't work anymore
- Calendar: Set resource title of private event to "Private"
- Core: Added $config["disable_links_for"] = ['GO\\Modules\\Tickets\\Model\\Ticket'];
- Calendar: Don't allow calendars from others as default calendar
- Smime: Added OCSP revocation check

10-09-2019 6.2.122
- Email: Fixed issue with utf-8 chars in attachment name
- Caldav: events with status needs-action were not synced. Change status to needs-action to tentative as needs-action is not a valid vevent status. 

15-08-2019 6.2.121
- Tickets: Fixed changing from agent ticket type to customer ticket type
- DAV: Fixed PHP Fatal error:  Uncaught Error: Call to a member function checkPermissionLevel() on boolean in /usr/share/groupoffice/modules/files/model/Folder.php:1322

14-06-2019 6.2.120
- Billing: grouping invoice items could make them dissappear.

12-06-2019 6.2.119
- Calendar: Fixed issue that event delete was not logged anymore in the Activitylog 
- Projects2, ProjectReport: Only show jobs who have timeentries between the given start and end date.
- Projects2, ProjectReport: Added Job column to timeentries grid.
- Fixed firefox keyboard navigation problem in grids
- Fixed issue that foldernotifications could not be checked anymore after a folder was deleted.

03-06-2019 6.2.118
- Email: Detect charset from HTML body if not present in IMAP structure